OSP-Config: Added Creation of the /var/www/images/stickers directory during install so permissions are set properly to www-data
OSP-Core: Added Endpoints required to handle OSP-Proxy.
OSP-Core: Set Chat Window to be cleared on Reconnection to prevent duplicate chat messages
OSP-Core: Updated Pillow to 8.1.2 to fix CVE-2021-27923
OSP-RTMP: Fixed Remaining RTMP Restream/Adaptive transcoding issues regarding wrong or unstable pull locations

0.8.7
==============================================
OSP-Core: Fixed an Issue where OSP would not load properly on first run due to checking for theme overrides that had not been set yet - Issue #366
OSP-Core: Fixed and Issue where all Channel Stickers were showing up in all Channels

0.8.6
==============================================
OSP-Core: Added Chat Stickers.  Stickers can be added at the Global Level or Channel Level.  Also includes a small set of OpenEmoji Built-In Stickers
OSP-Core: Added Sanity Checks for fs_uniquifier to ensure a random value has been assigned
OSP-Core: Fixes to Guest IP/UUID Tracking running off the rails and generating unneeded Database entries
OSP-Core: Fixed an issue where Custom Theme HTML Override was not applying when restarting OSP
OSP-Core: Altered the Chat Window Size on Defaultv2 and Defaultv2-Dark from 550px width to 35%
OSP-RTMP: Fixes to RTMP Adaptive Streaming caused by a fix done in 0.8.4 regarding RTMP playback authentication

0.8.5
==============================================
OSP-RTMP: Fixes to RTMP Restreaming

0.8.4
==============================================
OSP-Core: Changed Admin Webhooks Formatting
OSP-Core: Added Vanity URL to Public Channel APIv1 Return
OSP-Core: Refactored OSP-Core Startup Processes
OSP-Core: Refactored OSP-APIv1 into Namespaces
OSP-Core: Due to a change in Flask-Security-Too, the Login page will now only allow login via registered email address, instead of username.